# cmake-examples

./: .gitignore  Dockerfile  README.md  run
examples/exec-with-nested-library/: CMakeLists.txt
examples/exec-with-nested-library/src/: CMakeLists.txt  main.cpp
examples/exec-with-nested-library/src/one/: CMakeLists.txt  one.cpp  one.hpp
